			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

07-Nov-2002
~~~~~~~~~~~
Set hint to make panels appear on all workspaces (Laurent Moussault).

05-Nov-2002
~~~~~~~~~~~
Added Bookmarks toolbar icon (Liav).

04-Nov-2002
~~~~~~~~~~~
Removed some unused code and fixed a possible race condition.

03-Nov-2002
~~~~~~~~~~~
Update error message to give correct version of MIME database (reported by
FD Cami).

31-Oct-2002
~~~~~~~~~~~
Make the Find and Permissions help windows look nicer.
Added support for shadowed labels on the pinboard (Andras Mohari).

29-Oct-2002
~~~~~~~~~~~
Stop Metacity from complaining that it can't decide whether the pinboard is
resizable or not (reported by Alastair Porter, solution suggested by 
Havoc Pennington).

28-Oct-2002
~~~~~~~~~~~
Make it more obvious that --new is only for debugging.
Added Norwegian translation (Sigve Indregard).

27-Oct-2002
~~~~~~~~~~~
Use our own stock icons for 'show hidden' and 'show details' toolbar buttons
(Stephen Watson). New details icon is a modified version of a Gtk stock
icon, while show hidden is taken from sawfish.

26-Oct-2002
~~~~~~~~~~~
Code tidying (Bernard Jungen).

23-Oct-2002
~~~~~~~~~~~
Switch button-1/2 on Help, as it was too annoying.
Create thumbnails at 128x128 to be in-line with current thumbnails spec.
Bugfix: When using the lasso box with the pinboard, select icons based on
	where they actually are, not where they want to be (useful if you've
	just changed to a lower resolution and they're all stuck at the side!).

22-Oct-2002
~~~~~~~~~~~
Button-1 on Help shows the manual, other button opens the Help directory
(Marcin Juszkiewicz).

21-Oct-2002
~~~~~~~~~~~
More checks to cope with invalid filenames (Marcin Juszkiewicz).
Updated Polish translation (Marcin Juszkiew).

19-Oct-2002
~~~~~~~~~~~
Updated Spanish translation (Marcelo Ramos).

18-Oct-2002
~~~~~~~~~~~
Cope slightly better with invalid filenames in various places (reported by
Marcin Juszkiewicz and Andras Mohari).