@@ -4,7 +4,8 @@
 
 07-Nov-2002
 ~~~~~~~~~~~
-Set hint to make panels appear on all workspaces (Laurent Moussault).
+Set hint to make panels appear on all workspaces, and support metacity-style
+iconified windows (suggested by Laurent Moussault).
 
 05-Nov-2002
 ~~~~~~~~~~~
